--- a/src/plugins/DamagePlugin/styles.css
+++ b/src/plugins/DamagePlugin/styles.css
@@ -90,3 +90,13 @@
     padding-bottom: 15px;
     padding-top: 15px;
   }
+
+  .searchOptions{
+    padding-left: 15px;
+    padding-top: 15px;
+  }
+
+  .searchOptionElab{
+    padding-left: 45px;
+    padding-top: 15px;
+  }
